--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -72,10 +72,6 @@ h2,
 		font-size: 44px;
 		line-height: 50px;
 	}
-	// @include media($desktop) {
-	// 	font-size: 50px;
-	// 	line-height: 55px;
-	// }
 }
 
 h3 {
@@ -88,7 +84,7 @@ h3 {
 
 h4 {
 	font-size: 24px;
-	@include media($desktop) {
+	@include media($tablet) {
 		font-size: 30px;
 	}
 }
@@ -96,7 +92,7 @@ h4 {
 h5,
 h6 {
 	font-size: 22px;
-	@include media($desktop) {
+	@include media($tablet) {
 		font-size: 28px;
 	}
 }
@@ -147,6 +143,16 @@ main,
 	.contain {
 		@include media($desktop) {
 			padding: 0 20px;
+		}
+	}
+}
+
+.is--device.is--ipad {
+	section,
+	main,
+	.contain {
+		@include media($desktop) {
+			padding: 20px  calc(40px + (50% - (#{$desktop} / 2))) !important;
 		}
 	}
 }
