--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -38,7 +38,10 @@
 .menu-trigger {
 	position: relative;
 	.is--ipad & {
-		display: block;
+	position: absolute;
+	left: 0px;
+	display: block;
+	width: 65px;
 	}
 	// width: 120px;
 	padding: 15px 20px 15px 20px;
