--- a/sass/_menu_hover.scss
+++ b/sass/_menu_hover.scss
@@ -133,8 +133,8 @@ $menuHeight : 60px;
 			// border: 1px solid rgba($lightColor, .2); //for visual purposes.  can remove.
 			position: absolute;
 			top: 40px;
-			left: 50%;
-			right: 50%;
+			left: 125px;
+			right: auto;
 			transform: translate(-50%, 0);
 			opacity: 0;
 			visibility: hidden;
