--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -16,6 +16,8 @@
 		padding-right: 40px;
 		padding-top: 90px;
 		padding-bottom: 0px;
+		max-width: 1200px;
+		margin: 0 auto;
 		
 	}
 	.the-headline {
@@ -24,8 +26,6 @@
 			font-style: normal;
 		}
 	}
-	// width: 1020px;
-
 	ul {
 		margin: 0;
 		margin-top: 60px;
@@ -91,7 +91,9 @@
 		}
 
 	}
-	a {text-decoration: none;}
+	a {text-decoration: none;
+		color: $darkColor;
+	}
 }
 
 
@@ -119,18 +121,17 @@
 	bottom: -500px;
 	right: 0;
 	left: 0;
-	border-top: 1px solid rgba($secondaryAlt, .4);
-	transition: all .5s ease-out;
+	transition: all .4s ease-out;
 	padding-left: 20px;
 	padding-right: 20px;
 
 	@include media($tablet) {
+		transition: all .2s ease-out;
 		height: auto;
 		bottom: -70px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		// width: 100%;
 	}
 	
 
@@ -169,12 +170,12 @@
 
 		.type-singlelinetext,
 		.type-textarea {
+				width: 100%;
 			// position: relative;
 			input,
 			textarea {
 				padding: 14px 20px;
 				background: transparent !important;
-				width: 100%;
 				border: 1px solid rgba(#fff, 100%);
 				background: #fff;
 				font-size: 16px;
@@ -393,11 +394,19 @@
 	ul {
 		list-style: none;
 		display: flex;
+		flex-wrap: wrap;
 		justify-content: space-between;
 		align-items: center;
+		@include media($tablet) {
+			flex-wrap: nowrap;
+		}
 	}
 	li {
 		margin: 0 10px;
+		width: 25%;
+		@include media($tablet) {
+			width: auto;
+		}
 	}
 }
 
